<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/msg_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:text="@string/already"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/btn_start_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_start_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_start_login"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start_login"
        android:layout_width="329dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_btn_login"
        android:text="@string/login"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/msg_join"
        app:layout_constraintEnd_toEndOf="@+id/msg_join"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/msg_join"
        app:layout_constraintTop_toBottomOf="@id/msg_login" />

    <TextView
        android:id="@+id/msg_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_join"
        app:layout_constraintEnd_toEndOf="@+id/btn_start_join"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_start_join"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_login" />

    <Button
        android:id="@+id/btn_start_join"
        android:layout_width="329dp"
        android:layout_height="42dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/background_btn_join"
        android:text="@string/join"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_join" />

</androidx.constraintlayout.widget.ConstraintLayout>