<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="7.4dp"
            android:layout_height="12dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/et_adress"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/hint"
        android:hint="이메일 주소"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/hint"
        android:hint="비밀번호"
        android:textColorHint="@color/hint"

        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/et_adress" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="329dp"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_btn_login"
        android:text="@string/login"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_join"
        app:layout_constraintEnd_toEndOf="@+id/btn_join"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_join"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="329dp"
        android:layout_height="42dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_btn_join"
        android:text="@string/join"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/msg_search_password"
        app:layout_constraintEnd_toEndOf="@+id/msg_search_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/msg_search_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/msg_search_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:text="@string/search_password"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_join" />


</androidx.constraintlayout.widget.ConstraintLayout>